chore: calculation list item

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="{% url 'calculate_cost' %}">Calcular Custo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'calculation_list' %}">Lista de Calculos</a>
+          <a class="nav-link" href="{% url 'calculation_list' %}">Lista de Cálculos</a>
         </li>
       </ul>
     </div>
